force-app/main/default/objects/R360_Project_Evidence__c/R360_Project_Evidence__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Governed delivery evidence linking a resource, engagement, role and capability.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Project Evidence</label><nameField><displayFormat>EVD-{00000}</displayFormat><label>Evidence Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Project Evidence</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>