force-app/main/default/objects/R360_Project_Evidence__c/fields/Capability__c.field-meta.xml
<CustomField><fullName>Capability__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Capability</label><referenceTo>Capability__c</referenceTo><relationshipLabel>Project Evidence</relationshipLabel><relationshipName>Project_Evidence</relationshipName><required>true</required><type>Lookup</type></CustomField>