force-app/main/default/objects/R360_Project_Evidence__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Engagement</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Project Evidence</relationshipLabel><relationshipName>Project_Evidence</relationshipName><required>true</required><type>Lookup</type></CustomField>