force-app/main/default/objects/R360_Project_Evidence__c/fields/Evidence_Key__c.field-meta.xml
<CustomField><fullName>Evidence_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Evidence Key</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>