force-app/main/default/objects/R360_Project_Evidence__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Project Evidence</relationshipLabel><relationshipName>Project_Evidence</relationshipName><required>true</required><type>Lookup</type></CustomField>