force-app/main/default/objects/R360_Project_Evidence__c/fields/Role__c.field-meta.xml
<CustomField><fullName>Role__c</fullName><label>Role</label><length>120</length><required>true</required><type>Text</type></CustomField>