force-app/main/default/objects/R360_Project_Evidence__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><defaultValue>'Pending'</defaultValue><label>State</label><length>30</length><required>true</required><type>Text</type></CustomField>