force-app/main/default/objects/R360_Project_Evidence__c/fields/Summary__c.field-meta.xml
<CustomField><fullName>Summary__c</fullName><label>Sanitized Evidence Summary</label><length>4000</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>