force-app/main/default/objects/R360_Project_Evidence__c/fields/Verified_By__c.field-meta.xml
<CustomField><fullName>Verified_By__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Verified By</label><referenceTo>User</referenceTo><relationshipLabel>Verified Project Evidence</relationshipLabel><relationshipName>Verified_Project_Evidence</relationshipName><type>Lookup</type></CustomField>